# til

./: .gitignore  LICENSE  README.md
agent/smolagents/: hello.py  text_to_sql.py  tool_calling_any_llm.py
programming/python/agent/hf-smolagents/: pyproject.toml  tool_calling_ollama.py  vlm_web_browser.py
programming/python/conda/: README.md
programming/python/misc/: generate_slide.py  pyproject.toml
