[project]
name = "hf-smolagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.12.14",
    "helium>=5.1.0",
    "python-dotenv>=1.0.1",
    "selenium>=4.28.1",
    "smolagents[all]>=1.5.0",
    "transformers>=4.48.1",
]
